# allocazam

./: .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  speedtest.sh
bench/: BUILD.bazel  CMakeLists.txt  malloc_benchmark.cpp  map_std_allocator_benchmark.cpp  runner_benchmark.cpp  std_allocator_bench_common.hpp  std_concurrent_benchmark.cpp  string_std_allocator_benchmark.cpp  unordered_map_std_allocator_benchmark.cpp  utils.hpp  vector_std_allocator_benchmark.cpp
lib/: allocazam.cpp  allocazam.hpp  runner.hpp  types.hpp
src/: main.cpp  utils.hpp
tests/: BUILD.bazel  CMakeLists.txt  runner_expand_smoke.cpp  std_allocator_expand_smoke.cpp  std_allocator_smoke.cpp
utils/: format.sh
