add_executable(allocazam_malloc_benchmark malloc_benchmark.cpp)
target_link_libraries(allocazam_malloc_benchmark PUBLIC liballocazam)
target_include_directories(allocazam_malloc_benchmark PRIVATE ${PROJECT_SOURCE_DIR}/bench)

add_executable(allocazam_vector_std_allocator_benchmark vector_std_allocator_benchmark.cpp)
target_link_libraries(allocazam_vector_std_allocator_benchmark PUBLIC liballocazam)
target_include_directories(allocazam_vector_std_allocator_benchmark PRIVATE ${PROJECT_SOURCE_DIR}/bench)

add_executable(allocazam_string_std_allocator_benchmark string_std_allocator_benchmark.cpp)
target_link_libraries(allocazam_string_std_allocator_benchmark PUBLIC liballocazam)
target_include_directories(allocazam_string_std_allocator_benchmark PRIVATE ${PROJECT_SOURCE_DIR}/bench)

add_executable(allocazam_map_std_allocator_benchmark map_std_allocator_benchmark.cpp)
target_link_libraries(allocazam_map_std_allocator_benchmark PUBLIC liballocazam)
target_include_directories(allocazam_map_std_allocator_benchmark PRIVATE ${PROJECT_SOURCE_DIR}/bench)

add_executable(allocazam_unordered_map_std_allocator_benchmark unordered_map_std_allocator_benchmark.cpp)
target_link_libraries(allocazam_unordered_map_std_allocator_benchmark PUBLIC liballocazam)
target_include_directories(allocazam_unordered_map_std_allocator_benchmark PRIVATE ${PROJECT_SOURCE_DIR}/bench)

add_executable(allocazam_runner_benchmark runner_benchmark.cpp)
target_link_libraries(allocazam_runner_benchmark PUBLIC liballocazam)
