load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "std_allocator_smoke",
    srcs = ["std_allocator_smoke.cpp"],
    deps = [
        "//:liballocazam",
        "//bench:bench_utils",
    ],
)

cc_test(
    name = "runner_expand_smoke",
    srcs = ["runner_expand_smoke.cpp"],
    deps = [
        "//:liballocazam",
        "//bench:bench_utils",
    ],
)

cc_test(
    name = "std_allocator_expand_smoke",
    srcs = ["std_allocator_expand_smoke.cpp"],
    deps = [
        "//:liballocazam",
        "//bench:bench_utils",
    ],
)
